change: fixed section cards size on smaller screens

--- a/styles/components/HomeSectionsCard.module.scss
+++ b/styles/components/HomeSectionsCard.module.scss
@@ -35,3 +35,20 @@
     background-color: vars.$dark-4;
   }
 }
+
+@media (min-width: vars.$medium) {
+  .cardContainer {
+    width: 180px;
+    height: 233px;
+  }
+}
+
+@media (min-width: vars.$extra-large) {
+  .cardContainer{
+    width: 231px;
+    height: 284px;
+  }
+  .homeWrapper {
+    max-width: 1370px;
+  }
+}
