--- a/styles/pages/Home.module.scss
+++ b/styles/pages/Home.module.scss
@@ -46,12 +46,12 @@
 
 @media (min-width: vars.$medium) {
   .homeWrapper {
-    max-width: 900px;
+    max-width: 1000px;
   }
 }
 
 @media (min-width: vars.$extra-large) {
   .homeWrapper {
-    max-width: 1270px;
+    max-width: 1370px;
   }
 }
